--- a/FootballManagerHTML/index.html
+++ b/FootballManagerHTML/index.html
@@ -64,7 +64,7 @@
 
 						<p class="text-white text-[20px]">Neymar Jr</p>
 
-						<p class="text-gray-300 text-[14px]">220 Millions, Contrat jusqu'en 2025</p>
+						<p class="text-gray-300 text-[14px]">220 Millions €, Contrat jusqu'en 2025</p>
 
 					</div>
 
@@ -123,7 +123,7 @@
 
 						<p class="text-white text-[20px]">Olivier Giroud</p>
 
-						<p class="text-gray-300 text-[14px]">25 Millions proposés, refusé par <span class="hover:underline transition-all cursor-pointer">AC Milan</span></p>
+						<p class="text-gray-300 text-[14px]">25 Millions € proposés, refusé par <span class="hover:underline transition-all cursor-pointer">AC Milan</span></p>
 
 					</div>
 
@@ -391,7 +391,7 @@
 
 					<div class="text-white text-[12px] mt-4 mb-4 pt-4 border-t border-gray-300/25">
 
-						Bonjour Hugo !<br>Je viens vous voir pour savoir si ces joueurs pourront être libérés pour la prochaine compétition internationale (<span class="hover:underline cursor-pointer">Euro 2024</span>) :
+						Bonjour NOM_ENTRAINEUR !<br>Je viens vous voir pour savoir si ces joueurs pourront être libérés pour la prochaine compétition internationale (<span class="hover:underline cursor-pointer">Euro 2024</span>) :
 
 						<div class="my-2 px-3 py-2 bg-gray-300/10">
 
@@ -404,6 +404,78 @@
 					</div>
 
 				</div>
+
+				<div class="w-full py-3 flex items-center justify-center border-t border-gray-300/25 text-white text-[14px] hover:bg-white/10 transition-all cursor-pointer">Fermer le Message</div>
+
+			</div>
+
+			<!-- NOTIFICATION - NOUVEAU MESSAGE - GRAND -->
+			<div class="bg-[#1E2129] w-[40vh] border-t-[6px] border-t-blue-500 border border-gray-300/25">
+
+				<div class="p-4 pb-6 w-full flex items-start justify-between">
+
+					<span class="px-2 py-1 bg-blue-500 text-white text-[12px] font-bold rounded-sm">NOUVEAU MESSAGE</span>
+
+					<div class="block text-right">
+
+						<p class="text-gray-300 text-[14px]">16/02/2023 à 14h52</p>
+
+					</div>
+
+				</div>
+
+				<div class="px-6 py-0 pb-1 w-full">
+
+					<div class="cursor-pointer w-12 h-12 bg-[url('https://images.psg.media/media/192520/nasser-al-khelaifi-square.jpg')] bg-cover bg-center rounded-full"></div>
+
+					<p class="mt-2 text-white text-[14px] hover:underline cursor-pointer">Nasser al-Khelaïfi</p>
+
+					<p class="text-gray-300 text-[12px]">Président du Paris Saint Germain</p>
+
+					<div class="text-white text-[12px] mt-4 mb-4 pt-4 border-t border-gray-300/25">
+
+						Monsieur NOM_ENTRAINEUR, vos résultats ne sont pas dans les attentes de notre club ! Changer cette situation ou nous seront contrain de mettre fin a votre contrat ! <br><br> Cordialement, <br> <span class="hover:underline cursor-pointer">Nasser al-Khelaïfi</span>
+
+					</div>
+
+				</div>
+
+				<div class="w-full py-3 flex items-center justify-center border-t border-gray-300/25 text-white text-[14px] hover:bg-white/10 transition-all cursor-pointer">Fermer le Message</div>
+
+			</div>
+
+			<!-- NOTIFICATION - NOUVEAU MESSAGE - GRAND -->
+			<div class="bg-[#1E2129] w-[40vh] border-t-[6px] border-t-blue-500 border border-gray-300/25">
+
+				<div class="p-4 pb-6 w-full flex items-start justify-between">
+
+					<span class="px-2 py-1 bg-blue-500 text-white text-[12px] font-bold rounded-sm">NOUVEAU MESSAGE</span>
+
+					<div class="block text-right">
+
+						<p class="text-gray-300 text-[14px]">16/02/2023 à 14h52</p>
+
+					</div>
+
+				</div>
+
+				<div class="px-6 py-0 pb-1 w-full">
+
+					<div class="cursor-pointer w-12 h-12 bg-[url('https://images.psg.media/media/192520/nasser-al-khelaifi-square.jpg')] bg-cover bg-center rounded-full"></div>
+
+					<p class="mt-2 text-white text-[14px] hover:underline cursor-pointer">Nasser al-Khelaïfi</p>
+
+					<p class="text-gray-300 text-[12px]">Président du Paris Saint Germain</p>
+
+					<div class="text-white text-[12px] mt-4 mb-4 pt-4 border-t border-gray-300/25">
+
+						Monsieur NOM_ENTRAINEUR, vos résultats sont tout bonnement incroyable ! Le conseil d'administration du Paris Saint Germain vous donne <span class="text-green-500">15 Millions €</span> en plus cette saison ! Continuer ce travail. <br><br> Cordialement, <br> <span class="hover:underline cursor-pointer">Nasser al-Khelaïfi</span>
+
+					</div>
+
+				</div>
+
+				<div class="w-full py-3 flex items-center justify-center border-t border-gray-300/25 text-white text-[14px] hover:bg-white/10 transition-all cursor-pointer">Fermer le Message</div>
 
 			</div>
 
