--- a/FootballManagerHTML/index.html
+++ b/FootballManagerHTML/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -113,7 +113,7 @@
 
 					</div>
 
-					<img src="https://upload.wikimedia.org/wikipedia/fr/thumb/c/c7/Logo_Real_Madrid.svg/1468px-Logo_Real_Madrid.svg.png" class="h-16">
+					<img alt="Logo Real Madrid" src="https://upload.wikimedia.org/wikipedia/fr/thumb/c/c7/Logo_Real_Madrid.svg/1468px-Logo_Real_Madrid.svg.png" class="h-16">
 
 				</div>
 
@@ -172,7 +172,7 @@
 
 					</div>
 
-					<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d0/Logo_of_AC_Milan.svg/1200px-Logo_of_AC_Milan.svg.png" class="h-16">
+					<img alt="Logo AC Milan" src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d0/Logo_of_AC_Milan.svg/1200px-Logo_of_AC_Milan.svg.png" class="h-16">
 
 				</div>
 
@@ -182,7 +182,7 @@
 
 						<p class="text-white text-[20px]">Mattéo Guendouzi</p>
 
-						<p class="text-gray-300 text-[14px]">Prêt de 1 ans vers <span class="hover:underline transition-all cursor-pointer">AC Milan</span>, Achat non obligatoire</p>
+						<p class="text-gray-300 text-[14px]">Prêt de 1 an vers <span class="hover:underline transition-all cursor-pointer">AC Milan</span>, Achat non obligatoire</p>
 
 					</div>
 
@@ -250,7 +250,7 @@
 
 							</div>
 
-							<img src="https://upload.wikimedia.org/wikipedia/fr/thumb/c/c7/Logo_Real_Madrid.svg/1468px-Logo_Real_Madrid.svg.png" class="h-10">
+							<img alt="Logo Real Madrid" src="https://upload.wikimedia.org/wikipedia/fr/thumb/c/c7/Logo_Real_Madrid.svg/1468px-Logo_Real_Madrid.svg.png" class="h-10">
 
 						</div>
 
@@ -283,7 +283,7 @@
 
 							</div>
 
-							<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d0/Logo_of_AC_Milan.svg/1200px-Logo_of_AC_Milan.svg.png" class="h-10">
+							<img alt="Logo AC Milan" src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d0/Logo_of_AC_Milan.svg/1200px-Logo_of_AC_Milan.svg.png" class="h-10">
 
 						</div>
 
@@ -399,7 +399,7 @@
 
 						</div>
 
-						Il faudrait me répondre le plus vite possible ! Je vous dit aussi félicitation pour votre victoire en championnat ! <br><br> Cordialement, <br> <span class="hover:underline cursor-pointer">Didier Deschamps</span>
+						Il faudrait me répondre le plus vite possible ! Je voudrais aussi votre félicité pour votre victoire en championnat ! <br><br> Cordialement, <br> <span class="hover:underline cursor-pointer">Didier Deschamps</span>
 
 					</div>
 
@@ -434,7 +434,7 @@
 
 					<div class="text-white text-[12px] mt-4 mb-4 pt-4 border-t border-gray-300/25">
 
-						Monsieur NOM_ENTRAINEUR, vos résultats ne sont pas dans les attentes de notre club ! Changer cette situation ou nous seront contrain de mettre fin a votre contrat ! <br><br> Cordialement, <br> <span class="hover:underline cursor-pointer">Nasser al-Khelaïfi</span>
+						Monsieur NOM_ENTRAINEUR, vos résultats ne sont pas dans les attentes de notre club ! Changer cette situation où nous serons dans l'obligation de mettre fin à votre contrat ! <br><br> Cordialement, <br> <span class="hover:underline cursor-pointer">Nasser al-Khelaïfi</span>
 
 					</div>
 
@@ -469,7 +469,7 @@
 
 					<div class="text-white text-[12px] mt-4 mb-4 pt-4 border-t border-gray-300/25">
 
-						Monsieur NOM_ENTRAINEUR, vos résultats sont tout bonnement incroyable ! Le conseil d'administration du Paris Saint Germain vous donne <span class="text-green-500">15 Millions €</span> en plus cette saison ! Continuer ce travail. <br><br> Cordialement, <br> <span class="hover:underline cursor-pointer">Nasser al-Khelaïfi</span>
+						Monsieur NOM_ENTRAINEUR, vos résultats sont tout bonnement incroyables ! Le conseil d'administration du Paris Saint Germain vous donne <span class="text-green-500">15 Millions €</span> en plus cette saison ! Continuer ce travail. <br><br> Cordialement, <br> <span class="hover:underline cursor-pointer">Nasser al-Khelaïfi</span>
 
 					</div>
 
