--- a/FootballManagerHTML/index.html
+++ b/FootballManagerHTML/index.html
@@ -376,6 +376,27 @@
 
 				</div>
 
+				<!-- NOTIFICATION - NOUVEAU MESSAGE - PETIT -->
+				<div class="bg-[#1E2129] w-[40vh] border-t-[6px] border-t-teal-500 border border-gray-300/25 hover:cursor-pointer hover:bg-white/10 transition-all">
+
+					<div class="p-4 w-full flex items-start justify-between">
+
+						<span class="px-2 py-1 bg-teal-500 text-white text-[12px] font-bold rounded-sm">OFFRE DE TRANSFERT</span>
+
+						<div class="block text-right">
+
+							<p class="text-white text-[14px]">Real Madrid Club de Fútbol</p>
+
+							<p class="text-gray-300 text-[12px]">Club de Football Pro - La Liga</p>
+
+							<p class="text-gray-300 text-[12px]">16/02/2023 à 14h52</p>
+
+						</div>
+
+					</div>
+
+				</div>
+
 			</div>
 
 			<!-- NOTIFICATION - NOUVEAU MESSAGE - GRAND -->
@@ -486,6 +507,43 @@
 					</div>
 
 				</div>
+
+				<div class="w-full py-3 flex items-center justify-center border-t border-gray-300/25 text-white text-[14px] hover:bg-white/10 transition-all cursor-pointer">Fermer le Message</div>
+
+			</div>
+
+			<!-- NOTIFICATION - NOUVEAU MESSAGE - GRAND -->
+			<div class="bg-[#1E2129] w-[40vh] border-t-[6px] border-t-teal-500 border border-gray-300/25">
+
+				<div class="p-4 pb-6 w-full flex items-start justify-between">
+
+					<span class="px-2 py-1 bg-teal-500 text-white text-[12px] font-bold rounded-sm">OFFRE DE TRANSFERT</span>
+
+					<div class="block text-right">
+
+						<p class="text-gray-300 text-[14px]">16/02/2023 à 14h52</p>
+
+					</div>
+
+				</div>
+
+				<div class="px-6 py-0 pb-1 w-full">
+
+					<img alt="Logo Real Madrid" src="https://upload.wikimedia.org/wikipedia/fr/thumb/c/c7/Logo_Real_Madrid.svg/1468px-Logo_Real_Madrid.svg.png" class="cursor-pointer h-14">
+
+					<p class="mt-2 text-white text-[14px] hover:underline cursor-pointer">Real Madrid Club de Fútbol</p>
+
+					<p class="text-gray-300 text-[12px]">Club de Football Pro - La Liga</p>
+
+					<div class="text-white text-[12px] mt-4 mb-4 pt-4 border-t border-gray-300/25">
+
+						Monsieur NOM_ENTRAINEUR, Nous venons par la présente poser une offre de transfert pour votre joueur <span class="px-2 py-1 rounded-sm bg-gray-300/25 hover:underline cursor-pointer">Olivier Giroud</span> pour la modique somme de <span class="text-green-500">25 Millions €</span>.<br><br> Cordialement, <br> <span class="hover:underline cursor-pointer">Real Madrid Club de Fútbol</span>
+
+					</div>
+
+				</div>
+
+				<div class="w-full py-3 flex items-center justify-center border-t border-gray-300/25 text-white text-[14px] hover:bg-teal-500/10 transition-all cursor-pointer">Regarder l'offre en détail</div>
 
 				<div class="w-full py-3 flex items-center justify-center border-t border-gray-300/25 text-white text-[14px] hover:bg-white/10 transition-all cursor-pointer">Fermer le Message</div>
 
