--- a/FootballManagerHTML/index.html
+++ b/FootballManagerHTML/index.html
@@ -74,9 +74,9 @@
 
 				</div>
 
-				<div class="w-full py-3 flex items-center justify-center border-t border-gray-300/25 text-white text-[14px] hover:bg-white/10 transition-all cursor-pointer">Détails du Transfert</div>
+				<div class="w-full py-3 flex items-center justify-center border-t border-gray-300/25 text-white text-[14px] hover:bg-green-500/10 transition-all cursor-pointer">Détails du Transfert</div>
 
-				<div class="w-full py-3 flex items-center justify-center border-t border-gray-300/25 text-white text-[14px] hover:bg-green-500/10 transition-all cursor-pointer">Fermer le Transfert</div>
+				<div class="w-full py-3 flex items-center justify-center border-t border-gray-300/25 text-white text-[14px] hover:bg-white/10 transition-all cursor-pointer">Fermer le Transfert</div>
 
 			</div>
 
@@ -137,9 +137,9 @@
 
 				</div>
 
-				<div class="w-full py-3 flex items-center justify-center border-t border-gray-300/25 text-white text-[14px] hover:bg-white/10 transition-all cursor-pointer">Détails du Transfert</div>
+				<div class="w-full py-3 flex items-center justify-center border-t border-gray-300/25 text-white text-[14px] hover:bg-red-600/10 transition-all cursor-pointer">Détails du Transfert</div>
 
-				<div class="w-full py-3 flex items-center justify-center border-t border-gray-300/25 text-white text-[14px] hover:bg-red-600/10 transition-all cursor-pointer">Fermer le Transfert</div>
+				<div class="w-full py-3 flex items-center justify-center border-t border-gray-300/25 text-white text-[14px] hover:bg-white/10 transition-all cursor-pointer">Fermer le Transfert</div>
 
 			</div>
 
@@ -200,9 +200,9 @@
 
 				</div>
 
-				<div class="w-full py-3 flex items-center justify-center border-t border-gray-300/25 text-white text-[14px] hover:bg-white/10 transition-all cursor-pointer">Détails du Prêt</div>
+				<div class="w-full py-3 flex items-center justify-center border-t border-gray-300/25 text-white text-[14px] hover:bg-amber-500/10 transition-all cursor-pointer">Détails du Prêt</div>
 
-				<div class="w-full py-3 flex items-center justify-center border-t border-gray-300/25 text-white text-[14px] hover:bg-amber-500/10 transition-all cursor-pointer">Fermer le Prêt</div>
+				<div class="w-full py-3 flex items-center justify-center border-t border-gray-300/25 text-white text-[14px] hover:bg-white/10 transition-all cursor-pointer">Fermer le Prêt</div>
 
 			</div>
 
