--- a/FootballManagerHTML/index.html
+++ b/FootballManagerHTML/index.html
@@ -11,7 +11,7 @@
 	</head>
 	<body style="font-family: Roboto Condensed, sans-serif;" class="bg-[#17191F]">
 
-		<div class="px-8 py-4 flex items-start gap-x-8 border-b border-gray-300/50">
+		<div class="px-8 py-4 flex items-start gap-x-8 border-b border-gray-300/50 bg-white/10">
 
 			<p class="text-white text-[22px]">NOTIFICATIONS</p>
 
@@ -549,17 +549,264 @@
 
 			</div>
 
+			<!-- NOTIFICATION - NOUVEAU MESSAGE - GRAND -->
+			<div class="bg-[#1E2129] w-[40vh] border-t-[6px] border-t-teal-500 border border-gray-300/25">
+
+				<div class="p-4 pb-6 w-full flex items-start justify-between">
+
+					<span class="px-2 py-1 bg-teal-500 text-white text-[12px] font-bold rounded-sm">OFFRE DE TRANSFERT</span>
+
+					<div class="block text-right">
+
+						<p class="text-gray-300 text-[14px]">16/02/2023 à 14h52</p>
+
+					</div>
+
+				</div>
+
+				<div class="px-6 py-0 pb-1 w-full">
+
+					<img alt="Logo Paris Saint Germain" src="https://upload.wikimedia.org/wikipedia/fr/thumb/8/86/Paris_Saint-Germain_Logo.svg/1200px-Paris_Saint-Germain_Logo.svg.png" class="cursor-pointer h-14">
+
+					<p class="mt-2 text-white text-[14px] hover:underline cursor-pointer">Paris Saint-Germain Football Club</p>
+
+					<p class="text-gray-300 text-[12px]">Club de Football Pro - Ligue 1</p>
+
+					<div class="text-white text-[12px] mt-4 mb-4 pt-4 border-t border-gray-300/25">
+
+						Monsieur NOM_ENTRAINEUR, votre réévaluation de notre offre (<span class="text-green-500">120 Millions €</span>) ne nous convient pas, nous avons décidé de retirer notre offre (<span class="text-green-500">80 Millions €</span>) sur votre joueur <span class="px-2 py-1 rounded-sm bg-gray-300/25 hover:underline cursor-pointer break-all">Lionel Messi</span>. Nous sommes déçus par ce désaccord.<br><br> Cordialement, <br> <span class="hover:underline cursor-pointer">Paris Saint-Germain Football Club</span>
+
+					</div>
+
+				</div>
+
+				<div class="w-full py-3 flex items-center justify-center border-t border-gray-300/25 text-white text-[14px] hover:bg-white/10 transition-all cursor-pointer">Fermer le Message</div>
+
+			</div>
+
 		</div>
 
-		<div class="px-8 py-4 flex items-start gap-x-8 border-b border-gray-300/50">
+		<div class="px-8 py-4 flex items-start gap-x-8 border-b border-gray-300/50 bg-white/10">
 
-			<p class="text-white text-[22px]">PAGES JOUEURS</p>
+			<p class="text-white text-[22px]">LIGUES PROFESSIONNELLES DE FOOTBALL</p>
 
 		</div>
 
-		<div class="px-8 py-16 grid grid-cols-4 gap-x-8 border-b border-gray-300/50">
+		<div class="px-8 py-16 flex items-start flex-wrap gap-8 border-b border-gray-300/50">
 
+			<!-- LIGUE PROFESSIONNELLE DE FOOTBALL -->
+			<div class="bg-[#1E2129] w-[40vh] border border-gray-300/25">
 
+				<div class="px-6 pt-6 pb-0 pb-1 w-full">
+
+					<img alt="Logo Ligue 1" src="https://upload.wikimedia.org/wikipedia/fr/c/ca/Logo_Ligue_1_Uber_Eats_2020.svg" class="cursor-pointer w-14">
+
+					<p class="mt-3 text-white text-[14px] hover:underline cursor-pointer">Ligue 1 - Championnat de France de football</p>
+
+					<p class="mt-1 text-gray-300 text-[12px]">Championnat professionnel de football masculin de plus haut niveau de la Fédération française de football</p>
+
+					<div class="text-white text-[12px] mt-4 mb-4 pt-4 border-t border-gray-300/25 grid grid-cols-3 gap-3">
+
+						<div class="w-full h-[10vh] bg-amber-400/[15%] border border-gray-300/25 flex items-center justify-center group hover:bg-white/10 cursor-pointer transition-all">
+
+							<img alt="Logo PSG" src="https://upload.wikimedia.org/wikipedia/fr/8/86/Paris_Saint-Germain_Logo.svg" class="h-[7vh] group-hover:h-[6.5vh] transition-all">
+
+						</div>
+
+						<div class="w-full h-[10vh] border border-gray-300/25 flex items-center justify-center group hover:bg-white/10 cursor-pointer transition-all">
+
+							<img alt="Logo OM" src="https://upload.wikimedia.org/wikipedia/fr/4/43/Logo_Olympique_de_Marseille.svg" class="h-[7vh] group-hover:h-[6.5vh] transition-all">
+
+						</div>
+
+						<div class="w-full h-[10vh] border border-gray-300/25 flex items-center justify-center group hover:bg-white/10 cursor-pointer transition-all">
+
+							<img alt="Logo OL" src="https://upload.wikimedia.org/wikipedia/fr/a/a5/Logo_Olympique_Lyonnais_-_2022.svg" class="h-[7vh] group-hover:h-[6.5vh] transition-all">
+
+						</div>
+
+						<div class="w-full h-[10vh] border border-gray-300/25 flex items-center justify-center group hover:bg-white/10 cursor-pointer transition-all">
+
+							<img alt="Logo Athletic Club ajaccien" src="https://upload.wikimedia.org/wikipedia/fr/5/53/Logo_AC_Ajaccio_2015.svg" class="h-[7vh] group-hover:h-[6.5vh] transition-all">
+
+						</div>
+
+						<div class="w-full h-[10vh] border border-gray-300/25 flex items-center justify-center group hover:bg-white/10 cursor-pointer transition-all">
+
+							<img alt="Logo Angers Sporting Club de l'Ouest" src="https://upload.wikimedia.org/wikipedia/fr/d/d3/Logo_Angers_SCO_-_2021.svg" class="h-[7vh] group-hover:h-[6.5vh] transition-all">
+
+						</div>
+
+						<div class="w-full h-[10vh] border border-gray-300/25 flex items-center justify-center group hover:bg-white/10 cursor-pointer transition-all">
+
+							<img alt="Logo Association de la jeunesse auxerroise" src="https://upload.wikimedia.org/wikipedia/fr/f/fe/Logo_AJ_Auxerre.svg" class="h-[7vh] group-hover:h-[6.5vh] transition-all">
+
+						</div>
+
+						<div class="w-full h-[10vh] border border-gray-300/25 flex items-center justify-center group hover:bg-white/10 cursor-pointer transition-all">
+
+							<img alt="Logo Stade Brestois" src="https://upload.wikimedia.org/wikipedia/fr/1/14/Logo_Stade_Brestois.svg" class="h-[7vh] group-hover:h-[6.5vh] transition-all">
+
+						</div>
+
+						<div class="w-full h-[10vh] border border-gray-300/25 flex items-center justify-center group hover:bg-white/10 cursor-pointer transition-all">
+
+							<img alt="Logo Clermont Foot 63" src="https://upload.wikimedia.org/wikipedia/fr/7/79/Logo_Clermont_Foot_63_2013.svg" class="h-[7vh] group-hover:h-[6.5vh] transition-all">
+
+						</div>
+
+						<div class="w-full h-[10vh] border border-gray-300/25 flex items-center justify-center group hover:bg-white/10 cursor-pointer transition-all">
+
+							<img alt="Logo Racing Club de Lens" src="https://upload.wikimedia.org/wikipedia/fr/3/3c/Logo_RC_Lens_2014.svg" class="h-[7vh] group-hover:h-[6.5vh] transition-all">
+
+						</div>
+
+						<div class="w-full h-[10vh] border border-gray-300/25 flex items-center justify-center group hover:bg-white/10 cursor-pointer transition-all">
+
+							<img alt="Logo LOSC Lille" src="https://upload.wikimedia.org/wikipedia/fr/6/62/Logo_LOSC_Lille_2018.svg" class="h-[7vh] group-hover:h-[6.5vh] transition-all">
+
+						</div>
+
+						<div class="w-full h-[10vh] border border-gray-300/25 flex items-center justify-center group hover:bg-white/10 cursor-pointer transition-all">
+
+							<img alt="Logo Football Club de Lorient" src="https://upload.wikimedia.org/wikipedia/fr/1/1d/Logo_FC_Lorient_Bretagne-Sud.svg" class="h-[7vh] group-hover:h-[6.5vh] transition-all">
+
+						</div>
+
+						<div class="w-full h-[10vh] border border-gray-300/25 flex items-center justify-center group hover:bg-white/10 cursor-pointer transition-all">
+
+							<img alt="Logo Association sportive de Monaco Football Club" src="https://upload.wikimedia.org/wikipedia/fr/5/58/Logo_AS_Monaco_FC_-_2021.svg" class="h-[7vh] group-hover:h-[6.5vh] transition-all">
+
+						</div>
+
+						<div class="w-full h-[10vh] border border-gray-300/25 flex items-center justify-center group hover:bg-white/10 cursor-pointer transition-all">
+
+							<img alt="Logo Montpellier Hérault Sport Club" src="https://upload.wikimedia.org/wikipedia/commons/9/99/Montpellier_H%C3%A9rault_Sport_Club_%28logo%2C_2000%29.svg" class="h-[7vh] group-hover:h-[6.5vh] transition-all">
+
+						</div>
+
+						<div class="w-full h-[10vh] border border-gray-300/25 flex items-center justify-center group hover:bg-white/10 cursor-pointer transition-all">
+
+							<img alt="Logo Football Club de Nantes" src="https://upload.wikimedia.org/wikipedia/commons/4/45/Logo_FC_Nantes_%28avec_fond%29_-_2019.svg" class="h-[7vh] group-hover:h-[6.5vh] transition-all">
+
+						</div>
+
+						<div class="w-full h-[10vh] border border-gray-300/25 flex items-center justify-center group hover:bg-white/10 cursor-pointer transition-all">
+
+							<img alt="Logo Olympique Gymnaste Club de Nice" src="https://upload.wikimedia.org/wikipedia/fr/b/b1/Logo_OGC_Nice_2013.svg" class="h-[7vh] group-hover:h-[6.5vh] transition-all">
+
+						</div>
+
+						<div class="w-full h-[10vh] border border-gray-300/25 flex items-center justify-center group hover:bg-white/10 cursor-pointer transition-all">
+
+							<img alt="Logo Stade de Reims" src="https://upload.wikimedia.org/wikipedia/fr/0/0a/Logo_Stade_de_Reims_-_2020_%28alternatif%29.svg" class="h-[7vh] group-hover:h-[6.5vh] transition-all">
+
+						</div>
+
+						<div class="w-full h-[10vh] border border-gray-300/25 flex items-center justify-center group hover:bg-white/10 cursor-pointer transition-all">
+
+							<img alt="Logo Stade rennais Football Club" src="https://upload.wikimedia.org/wikipedia/fr/e/e9/Logo_Stade_Rennais_FC.svg" class="h-[7vh] group-hover:h-[6.5vh] transition-all">
+
+						</div>
+
+						<div class="w-full h-[10vh] border border-gray-300/25 flex items-center justify-center group hover:bg-white/10 cursor-pointer transition-all">
+
+							<img alt="Logo Racing Club de Strasbourg Alsace" src="https://upload.wikimedia.org/wikipedia/fr/7/70/Racing_Club_de_Strasbourg_Alsace_%28RC_Strasbourg_-_RCS_-_RCSA%29_logo_officiel.svg" class="h-[7vh] group-hover:h-[6.5vh] transition-all">
+
+						</div>
+
+						<div class="w-full h-[10vh] border border-gray-300/25 flex items-center justify-center group hover:bg-white/10 cursor-pointer transition-all">
+
+							<img alt="Logo Toulouse Football Club" src="https://upload.wikimedia.org/wikipedia/fr/5/58/Toulouse_FC_logo_2021.svg" class="h-[7vh] group-hover:h-[6.5vh] transition-all">
+
+						</div>
+
+						<div class="w-full h-[10vh] border border-gray-300/25 flex items-center justify-center group hover:bg-white/10 cursor-pointer transition-all">
+
+							<img alt="Logo Espérance sportive Troyes Aube Champagne" src="https://upload.wikimedia.org/wikipedia/commons/3/31/Logo_estac_troyes_chrome.png" class="h-[7vh] group-hover:h-[6.5vh] transition-all">
+
+						</div>
+
+					</div>
+
+				</div>
+
+			</div>
+
+			<!-- LIGUE PROFESSIONNELLE DE FOOTBALL -->
+			<div class="bg-[#1E2129] w-[40vh] border border-gray-300/25">
+
+				<div class="px-6 pt-6 pb-0 pb-1 w-full">
+
+					<img alt="Logo LaLiga" src="https://upload.wikimedia.org/wikipedia/commons/b/bb/LaLiga_Santander_logo_%28stacked%29.svg" class="cursor-pointer w-[11vh]">
+
+					<p class="mt-3 text-white text-[14px] hover:underline cursor-pointer">LaLiga - Championnat d'Espagne de football</p>
+
+					<p class="mt-1 text-gray-300 text-[12px]">Championnat professionnel de football masculin de plus haut niveau de la Liga Nacional de Fútbol Profesional</p>
+
+					<div class="text-white text-[12px] mt-4 mb-4 pt-4 border-t border-gray-300/25 grid grid-cols-3 gap-3">
+
+						<div class="w-full h-[10vh] bg-amber-400/[15%] border border-gray-300/25 flex items-center justify-center group hover:bg-white/10 cursor-pointer transition-all">
+
+							<img alt="Logo Real Madrid" src="https://upload.wikimedia.org/wikipedia/fr/c/c7/Logo_Real_Madrid.svg" class="h-[7vh] group-hover:h-[6.5vh] transition-all">
+
+						</div>
+
+					</div>
+
+				</div>
+
+			</div>
+
+			<!-- LIGUE PROFESSIONNELLE DE FOOTBALL -->
+			<div class="bg-[#1E2129] w-[40vh] border border-gray-300/25">
+
+				<div class="px-6 pt-6 pb-0 pb-1 w-full">
+
+					<img alt="Logo Serie A" src="https://upload.wikimedia.org/wikipedia/commons/e/e9/Serie_A_logo_2022.svg" class="cursor-pointer w-14">
+
+					<p class="mt-3 text-white text-[14px] hover:underline cursor-pointer">Serie A - Championnat d'Italie de football</p>
+
+					<p class="mt-1 text-gray-300 text-[12px]">Championnat professionnel de football masculin de plus haut niveau de la FIGC - Lega Serie A</p>
+
+					<div class="text-white text-[12px] mt-4 mb-4 pt-4 border-t border-gray-300/25 grid grid-cols-3 gap-3">
+
+						<div class="w-full h-[10vh] bg-amber-400/[15%] border border-gray-300/25 flex items-center justify-center group hover:bg-white/10 cursor-pointer transition-all">
+
+							<img alt="Logo AC Milan" src="https://upload.wikimedia.org/wikipedia/commons/d/d0/Logo_of_AC_Milan.svg" class="h-[7vh] group-hover:h-[6.5vh] transition-all">
+
+						</div>
+
+					</div>
+
+				</div>
+
+			</div>
+
+			<!-- LIGUE PROFESSIONNELLE DE FOOTBALL -->
+			<div class="bg-[#1E2129] w-[40vh] border border-gray-300/25">
+
+				<div class="px-6 pt-6 pb-0 pb-1 w-full">
+
+					<img alt="Logo Premier League" src="https://www.pngkit.com/png/full/51-516917_premier-league-logo-white.png" class="cursor-pointer w-[18vh]">
+
+					<p class="mt-3 text-white text-[14px] hover:underline cursor-pointer">Premier League - Championnat d'Angleterre de football</p>
+
+					<p class="mt-1 text-gray-300 text-[12px]">Championnat professionnel de football masculin de plus haut niveau de The F.A. Premier League</p>
+
+					<div class="text-white text-[12px] mt-4 mb-4 pt-4 border-t border-gray-300/25 grid grid-cols-3 gap-3">
+
+						<div class="w-full h-[10vh] bg-amber-400/[15%] border border-gray-300/25 flex items-center justify-center group hover:bg-white/10 cursor-pointer transition-all">
+
+							<img alt="Logo Manchester City" src="https://upload.wikimedia.org/wikipedia/fr/b/ba/Logo_Manchester_City_2016.svg" class="h-[7vh] group-hover:h-[6.5vh] transition-all">
+
+						</div>
+
+					</div>
+
+				</div>
+
+			</div>
 
 		</div>
 
