--- a/FootballManagerHTML/index.html
+++ b/FootballManagerHTML/index.html
@@ -76,7 +76,7 @@
 
 				<div class="w-full py-3 flex items-center justify-center border-t border-gray-300/25 text-white text-[14px] hover:bg-green-500/10 transition-all cursor-pointer">Détails du Transfert</div>
 
-				<div class="w-full py-3 flex items-center justify-center border-t border-gray-300/25 text-white text-[14px] hover:bg-white/10 transition-all cursor-pointer">Fermer le Transfert</div>
+				<div class="w-full py-3 flex items-center justify-center border-t border-gray-300/25 text-white text-[14px] hover:bg-white/10 transition-all cursor-pointer">Fermer la notification</div>
 
 			</div>
 
@@ -139,7 +139,7 @@
 
 				<div class="w-full py-3 flex items-center justify-center border-t border-gray-300/25 text-white text-[14px] hover:bg-red-600/10 transition-all cursor-pointer">Détails du Transfert</div>
 
-				<div class="w-full py-3 flex items-center justify-center border-t border-gray-300/25 text-white text-[14px] hover:bg-white/10 transition-all cursor-pointer">Fermer le Transfert</div>
+				<div class="w-full py-3 flex items-center justify-center border-t border-gray-300/25 text-white text-[14px] hover:bg-white/10 transition-all cursor-pointer">Fermer la notification</div>
 
 			</div>
 
@@ -202,7 +202,7 @@
 
 				<div class="w-full py-3 flex items-center justify-center border-t border-gray-300/25 text-white text-[14px] hover:bg-amber-500/10 transition-all cursor-pointer">Détails du Prêt</div>
 
-				<div class="w-full py-3 flex items-center justify-center border-t border-gray-300/25 text-white text-[14px] hover:bg-white/10 transition-all cursor-pointer">Fermer le Prêt</div>
+				<div class="w-full py-3 flex items-center justify-center border-t border-gray-300/25 text-white text-[14px] hover:bg-white/10 transition-all cursor-pointer">Fermer la notification</div>
 
 			</div>
 
@@ -851,7 +851,7 @@
 
 					<p class="mt-3 text-white text-[20px] hover:underline cursor-pointer">Kylian Mbappé</p>
 
-					<p class="mt-1 text-gray-300 text-[14px]">Attaquant - Paris Saint-Germain - Ligue 1</p>
+					<p class="mt-1 text-gray-300 text-[14px]"><span class="hover:underline cursor-pointer">Attaquant</span> - <span class="hover:underline cursor-pointer">Paris Saint-Germain</span> - <span class="hover:underline cursor-pointer">Ligue 1</span></p>
 
 					<div class="text-white text-[12px] mt-4 mb-4 pt-4 border-t border-gray-300/25 grid grid-cols-1 gap-3">
 
@@ -954,7 +954,7 @@
 
 					<p class="mt-3 text-white text-[20px] hover:underline cursor-pointer">Kylian Mbappé</p>
 
-					<p class="mt-1 text-gray-300 text-[14px]">Attaquant - Paris Saint-Germain - Ligue 1</p>
+					<p class="mt-1 text-gray-300 text-[14px]"><span class="hover:underline cursor-pointer">Attaquant</span> - <span class="hover:underline cursor-pointer">Paris Saint-Germain</span> - <span class="hover:underline cursor-pointer">Ligue 1</span></p>
 
 					<div class="text-white text-[12px] mt-4 mb-4 pt-4 border-t border-gray-300/25 grid grid-cols-1 gap-3">
 
@@ -1069,7 +1069,7 @@
 
 					<p class="mt-3 text-white text-[20px] hover:underline cursor-pointer">Kylian Mbappé</p>
 
-					<p class="mt-1 text-gray-300 text-[14px]">Attaquant - Paris Saint-Germain - Ligue 1</p>
+					<p class="mt-1 text-gray-300 text-[14px]"><span class="hover:underline cursor-pointer">Attaquant</span> - <span class="hover:underline cursor-pointer">Paris Saint-Germain</span> - <span class="hover:underline cursor-pointer">Ligue 1</span></p>
 
 					<div class="text-white text-[12px] mt-4 mb-4 pt-4 border-t border-gray-300/25 grid grid-cols-3 gap-3">
 
