--- a/FootballManagerHTML/index.html
+++ b/FootballManagerHTML/index.html
@@ -313,12 +313,12 @@
 
 			<div class="grid grid-cols-1 gap-y-4">
 
-				<!-- NOTIFICATION - NOUVEAU MESSAGE - PETIT -->
+				<!-- NOTIFICATION - MESSAGE - PETIT -->
 				<div class="bg-[#1E2129] w-[40vh] border-t-[6px] border-t-blue-500 border border-gray-300/25 hover:cursor-pointer hover:bg-white/10 transition-all">
 
 					<div class="p-4 w-full flex items-start justify-between">
 
-						<span class="px-2 py-1 bg-blue-500 text-white text-[12px] font-bold rounded-sm">NOUVEAU MESSAGE</span>
+						<span class="px-2 py-1 bg-blue-500 text-white text-[12px] font-bold rounded-sm">MESSAGE</span>
 
 						<div class="block gap-x-1 text-right">
 
@@ -334,12 +334,12 @@
 
 				</div>
 
-				<!-- NOTIFICATION - NOUVEAU MESSAGE - PETIT -->
+				<!-- NOTIFICATION - MESSAGE - PETIT -->
 				<div class="bg-[#1E2129] w-[40vh] border-t-[6px] border-t-blue-500 border border-gray-300/25 hover:cursor-pointer hover:bg-white/10 transition-all">
 
 					<div class="p-4 w-full flex items-start justify-between">
 
-						<span class="px-2 py-1 bg-blue-500 text-white text-[12px] font-bold rounded-sm">NOUVEAU MESSAGE</span>
+						<span class="px-2 py-1 bg-blue-500 text-white text-[12px] font-bold rounded-sm">MESSAGE</span>
 
 						<div class="block text-right">
 
@@ -355,12 +355,12 @@
 
 				</div>
 
-				<!-- NOTIFICATION - NOUVEAU MESSAGE - PETIT -->
+				<!-- NOTIFICATION - MESSAGE - PETIT -->
 				<div class="bg-[#1E2129] w-[40vh] border-t-[6px] border-t-blue-500 border border-gray-300/25 hover:cursor-pointer hover:bg-white/10 transition-all">
 
 					<div class="p-4 w-full flex items-start justify-between">
 
-						<span class="px-2 py-1 bg-blue-500 text-white text-[12px] font-bold rounded-sm">NOUVEAU MESSAGE</span>
+						<span class="px-2 py-1 bg-blue-500 text-white text-[12px] font-bold rounded-sm">MESSAGE</span>
 
 						<div class="block text-right">
 
@@ -376,7 +376,7 @@
 
 				</div>
 
-				<!-- NOTIFICATION - NOUVEAU MESSAGE - PETIT -->
+				<!-- NOTIFICATION - MESSAGE - PETIT -->
 				<div class="bg-[#1E2129] w-[40vh] border-t-[6px] border-t-teal-500 border border-gray-300/25 hover:cursor-pointer hover:bg-white/10 transition-all">
 
 					<div class="p-4 w-full flex items-start justify-between">
@@ -399,12 +399,12 @@
 
 			</div>
 
-			<!-- NOTIFICATION - NOUVEAU MESSAGE - GRAND -->
+			<!-- NOTIFICATION - MESSAGE - GRAND -->
 			<div class="bg-[#1E2129] w-[40vh] border-t-[6px] border-t-blue-500 border border-gray-300/25">
 
 				<div class="p-4 pb-6 w-full flex items-start justify-between">
 
-					<span class="px-2 py-1 bg-blue-500 text-white text-[12px] font-bold rounded-sm">NOUVEAU MESSAGE</span>
+					<span class="px-2 py-1 bg-blue-500 text-white text-[12px] font-bold rounded-sm">MESSAGE</span>
 
 					<div class="block text-right">
 
@@ -442,12 +442,12 @@
 
 			</div>
 
-			<!-- NOTIFICATION - NOUVEAU MESSAGE - GRAND -->
+			<!-- NOTIFICATION - MESSAGE - GRAND -->
 			<div class="bg-[#1E2129] w-[40vh] border-t-[6px] border-t-blue-500 border border-gray-300/25">
 
 				<div class="p-4 pb-6 w-full flex items-start justify-between">
 
-					<span class="px-2 py-1 bg-blue-500 text-white text-[12px] font-bold rounded-sm">NOUVEAU MESSAGE</span>
+					<span class="px-2 py-1 bg-blue-500 text-white text-[12px] font-bold rounded-sm">MESSAGE</span>
 
 					<div class="block text-right">
 
@@ -477,12 +477,12 @@
 
 			</div>
 
-			<!-- NOTIFICATION - NOUVEAU MESSAGE - GRAND -->
+			<!-- NOTIFICATION - MESSAGE - GRAND -->
 			<div class="bg-[#1E2129] w-[40vh] border-t-[6px] border-t-blue-500 border border-gray-300/25">
 
 				<div class="p-4 pb-6 w-full flex items-start justify-between">
 
-					<span class="px-2 py-1 bg-blue-500 text-white text-[12px] font-bold rounded-sm">NOUVEAU MESSAGE</span>
+					<span class="px-2 py-1 bg-blue-500 text-white text-[12px] font-bold rounded-sm">MESSAGE</span>
 
 					<div class="block text-right">
 
@@ -512,7 +512,7 @@
 
 			</div>
 
-			<!-- NOTIFICATION - NOUVEAU MESSAGE - GRAND -->
+			<!-- NOTIFICATION - MESSAGE - GRAND -->
 			<div class="bg-[#1E2129] w-[40vh] border-t-[6px] border-t-teal-500 border border-gray-300/25">
 
 				<div class="p-4 pb-6 w-full flex items-start justify-between">
@@ -549,7 +549,7 @@
 
 			</div>
 
-			<!-- NOTIFICATION - NOUVEAU MESSAGE - GRAND -->
+			<!-- NOTIFICATION - MESSAGE - GRAND -->
 			<div class="bg-[#1E2129] w-[40vh] border-t-[6px] border-t-teal-500 border border-gray-300/25">
 
 				<div class="p-4 pb-6 w-full flex items-start justify-between">
@@ -922,9 +922,9 @@
 			</div>
 
 			<!-- CARTE D'UN JOUEUR -->
-			<div class="bg-[#1E2129] w-[40vh] border border-gray-300/25">
+			<div class="bg-[#1E2129] w-[80vh] border border-gray-300/25 grid grid-cols-2">
 
-				<div class="px-6 pt-6 pb-0 pb-1 w-full">
+				<div class="w-full px-6 pt-6 pb-0 pb-1 w-full border-r border-gray-300/25">
 
 					<div class="w-full flex items-start justify-between">
 
@@ -956,7 +956,7 @@
 
 					</div>
 
-					<p class="mt-3 text-white text-[20px] hover:underline cursor-pointer">Kylian Mbappé</p>
+					<p class="mt-3 text-white text-[20px]">Kylian Mbappé <span class="ml-1 text-gray-300 text-[14px]">23 ans</span></p>
 
 					<p class="mt-1 text-gray-300 text-[14px]"><span class="hover:underline cursor-pointer">Attaquant</span> - <span class="hover:underline cursor-pointer">Paris Saint-Germain</span> - <span class="hover:underline cursor-pointer">Ligue 1</span></p>
 
@@ -1031,6 +1031,111 @@
 								<div class="w-[88%] w-full rounded-full px-3 py-[2px] bg-green-500 text-white text-[12px] flex items-center justify-center"></div>
 
 							</div>
+
+						</div>
+
+					</div>
+
+				</div>
+
+				<div class="w-full px-6 pt-6 pb-0 pb-1">
+
+					<div class="text-white text-[12px] mb-4 pb-6 grid grid-cols-3 gap-3 border-b border-gray-300/25">
+
+						<div class="w-full flex items-center justify-center">
+
+							<div class="w-[10vh] h-[10vh]  flex items-center justify-center bg-[#1E2129] border border-gray-300/25 rounded-full">
+
+								<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-[5vh] h-[5vh] text-white">
+									<path stroke-linecap="round" stroke-linejoin="round" d="M3.75 13.5l10.5-11.25L12 10.5h8.25L9.75 21.75 12 13.5H3.75z" />
+								</svg>
+
+							</div>
+
+						</div>
+
+						<div class="w-full flex items-center justify-center">
+
+							<div class="w-[10vh] h-[10vh]  flex items-center justify-center bg-[#1E2129] border border-gray-300/25 rounded-full">
+
+								<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-[5vh] h-[5vh] text-white">
+									<path stroke-linecap="round" stroke-linejoin="round" d="M20.25 8.511c.884.284 1.5 1.128 1.5 2.097v4.286c0 1.136-.847 2.1-1.98 2.193-.34.027-.68.052-1.02.072v3.091l-3-3c-1.354 0-2.694-.055-4.02-.163a2.115 2.115 0 01-.825-.242m9.345-8.334a2.126 2.126 0 00-.476-.095 48.64 48.64 0 00-8.048 0c-1.131.094-1.976 1.057-1.976 2.192v4.286c0 .837.46 1.58 1.155 1.951m9.345-8.334V6.637c0-1.621-1.152-3.026-2.76-3.235A48.455 48.455 0 0011.25 3c-2.115 0-4.198.137-6.24.402-1.608.209-2.76 1.614-2.76 3.235v6.226c0 1.621 1.152 3.026 2.76 3.235.577.075 1.157.14 1.74.194V21l4.155-4.155" />
+								</svg>
+
+							</div>
+
+						</div>
+
+						<div class="w-full flex items-center justify-center">
+
+							<div class="w-[10vh] h-[10vh]  flex items-center justify-center bg-[#1E2129] border border-gray-300/25 rounded-full">
+
+								<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-[5vh] h-[5vh] text-white">
+									<path stroke-linecap="round" stroke-linejoin="round" d="M4.5 12.75l7.5-7.5 7.5 7.5m-15 6l7.5-7.5 7.5 7.5" />
+								</svg>
+
+							</div>
+
+						</div>
+
+						<div class="w-full flex items-center justify-center">
+
+							<div class="w-[10vh] h-[10vh]  flex items-center justify-center bg-[#1E2129] border border-gray-300/25 rounded-full">
+
+								<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-[5vh] h-[5vh] text-white">
+									<path stroke-linecap="round" stroke-linejoin="round" d="M15.362 5.214A8.252 8.252 0 0112 21 8.25 8.25 0 016.038 7.048 8.287 8.287 0 009 9.6a8.983 8.983 0 013.361-6.867 8.21 8.21 0 003 2.48z" />
+									<path stroke-linecap="round" stroke-linejoin="round" d="M12 18a3.75 3.75 0 00.495-7.467 5.99 5.99 0 00-1.925 3.546 5.974 5.974 0 01-2.133-1A3.75 3.75 0 0012 18z" />
+								</svg>
+
+							</div>
+
+						</div>
+
+						<div class="w-full flex items-center justify-center">
+
+							<div class="w-[10vh] h-[10vh]  flex items-center justify-center bg-[#1E2129] border border-gray-300/25 rounded-full">
+
+								<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-[5vh] h-[5vh] text-white">
+									<path stroke-linecap="round" stroke-linejoin="round" d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12z" />
+								</svg>
+
+							</div>
+
+						</div>
+
+						<div class="w-full flex items-center justify-center">
+
+							<div class="w-[10vh] h-[10vh]  flex items-center justify-center bg-[#1E2129] border border-gray-300/25 rounded-full">
+
+								<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-[5vh] h-[5vh] text-white">
+									<path stroke-linecap="round" stroke-linejoin="round" d="M16.5 18.75h-9m9 0a3 3 0 013 3h-15a3 3 0 013-3m9 0v-3.375c0-.621-.503-1.125-1.125-1.125h-.871M7.5 18.75v-3.375c0-.621.504-1.125 1.125-1.125h.872m5.007 0H9.497m5.007 0a7.454 7.454 0 01-.982-3.172M9.497 14.25a7.454 7.454 0 00.981-3.172M5.25 4.236c-.982.143-1.954.317-2.916.52A6.003 6.003 0 007.73 9.728M5.25 4.236V4.5c0 2.108.966 3.99 2.48 5.228M5.25 4.236V2.721C7.456 2.41 9.71 2.25 12 2.25c2.291 0 4.545.16 6.75.47v1.516M7.73 9.728a6.726 6.726 0 002.748 1.35m8.272-6.842V4.5c0 2.108-.966 3.99-2.48 5.228m2.48-5.492a46.32 46.32 0 012.916.52 6.003 6.003 0 01-5.395 4.972m0 0a6.726 6.726 0 01-2.749 1.35m0 0a6.772 6.772 0 01-3.044 0" />
+								</svg>
+
+							</div>
+
+						</div>
+
+					</div>
+
+					<div class="text-white text-[12px] mb-4 pb-6 border-b border-gray-300/25">
+
+						<div class="flex items-center">
+
+							<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 text-green-500">
+								<path stroke-linecap="round" stroke-linejoin="round" d="M21 10.5h.375c.621 0 1.125.504 1.125 1.125v2.25c0 .621-.504 1.125-1.125 1.125H21M4.5 10.5H18V15H4.5v-4.5zM3.75 18h15A2.25 2.25 0 0021 15.75v-6a2.25 2.25 0 00-2.25-2.25h-15A2.25 2.25 0 001.5 9.75v6A2.25 2.25 0 003.75 18z" />
+							</svg>
+
+							<p class="ml-2 text-green-500 text-[14px]">Joueur en pleine forme</p>
+
+						</div>
+
+						<div class="mt-2 flex items-center">
+
+							<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 text-amber-500">
+								<path stroke-linecap="round" stroke-linejoin="round" d="M16.5 18.75h-9m9 0a3 3 0 013 3h-15a3 3 0 013-3m9 0v-3.375c0-.621-.503-1.125-1.125-1.125h-.871M7.5 18.75v-3.375c0-.621.504-1.125 1.125-1.125h.872m5.007 0H9.497m5.007 0a7.454 7.454 0 01-.982-3.172M9.497 14.25a7.454 7.454 0 00.981-3.172M5.25 4.236c-.982.143-1.954.317-2.916.52A6.003 6.003 0 007.73 9.728M5.25 4.236V4.5c0 2.108.966 3.99 2.48 5.228M5.25 4.236V2.721C7.456 2.41 9.71 2.25 12 2.25c2.291 0 4.545.16 6.75.47v1.516M7.73 9.728a6.726 6.726 0 002.748 1.35m8.272-6.842V4.5c0 2.108-.966 3.99-2.48 5.228m2.48-5.492a46.32 46.32 0 012.916.52 6.003 6.003 0 01-5.395 4.972m0 0a6.726 6.726 0 01-2.749 1.35m0 0a6.772 6.772 0 01-3.044 0" />
+							</svg>
+
+							<p class="ml-2 text-amber-500 text-[14px]">Gagnant du Ballon d'Or 2023</p>
 
 						</div>
 
