--- a/FootballManagerHTML/index.html
+++ b/FootballManagerHTML/index.html
@@ -1141,6 +1141,22 @@
 
 					</div>
 
+					<div class="text-white text-[12px] mb-4 pb-6">
+
+						<div class="flex items-center">
+
+							<p class="text-white text-[14px]">Nombres de buts cette saison : 46 buts</p>
+
+						</div>
+
+						<div class="flex items-center">
+
+							<p class="text-white text-[14px]">Nombres de buts total : 451 buts</p>
+
+						</div>
+
+					</div>
+
 				</div>
 
 			</div>
