--- a/FootballManagerHTML/index.html
+++ b/FootballManagerHTML/index.html
@@ -8,6 +8,47 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
+
+		<style>
+			.tooltip {
+				position: relative;
+				display: inline-block;
+				border-bottom: 1px dotted black;
+			}
+
+			.tooltip .tooltiptext {
+				visibility: hidden;
+				width: 120px;
+				background-color: #555;
+				color: #fff;
+				text-align: center;
+				border-radius: 6px;
+				padding: 5px 0;
+				position: absolute;
+				z-index: 1;
+				bottom: 100%;
+				left: 50%;
+				margin-left: -60px;
+				opacity: 0;
+				transition: opacity 0.3s;
+			}
+
+			.tooltip .tooltiptext::after {
+				content: "";
+				position: absolute;
+				top: 100%;
+				left: 50%;
+				margin-left: -5px;
+				border-width: 5px;
+				border-style: solid;
+				border-color: #555 transparent transparent transparent;
+			}
+
+			.tooltip:hover .tooltiptext {
+				visibility: visible;
+				opacity: 1;
+			}
+		</style>
 	</head>
 	<body style="font-family: Roboto Condensed, sans-serif;" class="bg-[#17191F]">
 
@@ -537,7 +578,7 @@
 
 					<div class="text-white text-[12px] mt-4 mb-4 pt-4 border-t border-gray-300/25">
 
-						Monsieur NOM_ENTRAINEUR, Nous venons par la présente poser une offre de transfert pour votre joueur <span class="px-2 py-1 rounded-sm bg-gray-300/25 hover:underline cursor-pointer">Olivier Giroud</span> pour la modique somme de <span class="text-green-500">25 000 000 €</span>.<br><br> Cordialement, <br> <span class="hover:underline cursor-pointer">Real Madrid Club de Fútbol</span>
+						Monsieur NOM_ENTRAINEUR, Nous venons par la présente poser une offre de transfert pour votre joueur <span class="px-[3px] py-[1px] rounded-sm bg-gray-300/25 hover:underline cursor-pointer">Olivier Giroud</span> pour la modique somme de <span class="text-green-500">25 000 000 €</span>.<br><br> Cordialement, <br> <span class="hover:underline cursor-pointer">Real Madrid Club de Fútbol</span>
 
 					</div>
 
@@ -574,7 +615,7 @@
 
 					<div class="text-white text-[12px] mt-4 mb-4 pt-4 border-t border-gray-300/25">
 
-						Monsieur NOM_ENTRAINEUR, votre réévaluation de notre offre (<span class="text-green-500">120 000 000 €</span>) ne nous convient pas, nous avons décidé de retirer notre offre (<span class="text-green-500">80 000 000 €</span>) sur votre joueur <span class="px-2 py-1 rounded-sm bg-gray-300/25 hover:underline cursor-pointer break-all">Lionel Messi</span>. Nous sommes déçus par ce désaccord.<br><br> Cordialement, <br> <span class="hover:underline cursor-pointer">Paris Saint-Germain Football Club</span>
+						Monsieur NOM_ENTRAINEUR, votre réévaluation de notre offre (<span class="text-green-500">120 000 000 €</span>) ne nous convient pas, nous avons décidé de retirer notre offre (<span class="text-green-500">80 000 000 €</span>) sur votre joueur <span class="px-[3px] py-[1px] rounded-sm bg-gray-300/25 hover:underline cursor-pointer break-all">Lionel Messi</span>. Nous sommes déçus par ce désaccord.<br><br> Cordialement, <br> <span class="hover:underline cursor-pointer">Paris Saint-Germain Football Club</span>
 
 					</div>
 
@@ -1044,9 +1085,11 @@
 
 						<div class="w-full flex items-center justify-center">
 
-							<div class="w-[10vh] h-[10vh]  flex items-center justify-center bg-[#1E2129] border border-gray-300/25 rounded-full">
+							<div class="w-[8vh] h-[8vh] flex items-center justify-center bg-[#1E2129] border border-gray-300/25 rounded-full tooltip">
 
-								<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-[5vh] h-[5vh] text-white">
+								<span class="tooltiptext">Élément moteur</span>
+
+								<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-[4vh] h-[4vh] text-white">
 									<path stroke-linecap="round" stroke-linejoin="round" d="M3.75 13.5l10.5-11.25L12 10.5h8.25L9.75 21.75 12 13.5H3.75z" />
 								</svg>
 
@@ -1056,9 +1099,11 @@
 
 						<div class="w-full flex items-center justify-center">
 
-							<div class="w-[10vh] h-[10vh]  flex items-center justify-center bg-[#1E2129] border border-gray-300/25 rounded-full">
+							<div class="w-[8vh] h-[8vh] flex items-center justify-center bg-[#1E2129] border border-gray-300/25 rounded-full tooltip">
 
-								<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-[5vh] h-[5vh] text-white">
+								<span class="tooltiptext">Communicatif</span>
+
+								<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-[4vh] h-[4vh] text-white">
 									<path stroke-linecap="round" stroke-linejoin="round" d="M20.25 8.511c.884.284 1.5 1.128 1.5 2.097v4.286c0 1.136-.847 2.1-1.98 2.193-.34.027-.68.052-1.02.072v3.091l-3-3c-1.354 0-2.694-.055-4.02-.163a2.115 2.115 0 01-.825-.242m9.345-8.334a2.126 2.126 0 00-.476-.095 48.64 48.64 0 00-8.048 0c-1.131.094-1.976 1.057-1.976 2.192v4.286c0 .837.46 1.58 1.155 1.951m9.345-8.334V6.637c0-1.621-1.152-3.026-2.76-3.235A48.455 48.455 0 0011.25 3c-2.115 0-4.198.137-6.24.402-1.608.209-2.76 1.614-2.76 3.235v6.226c0 1.621 1.152 3.026 2.76 3.235.577.075 1.157.14 1.74.194V21l4.155-4.155" />
 								</svg>
 
@@ -1068,9 +1113,11 @@
 
 						<div class="w-full flex items-center justify-center">
 
-							<div class="w-[10vh] h-[10vh]  flex items-center justify-center bg-[#1E2129] border border-gray-300/25 rounded-full">
+							<div class="w-[8vh] h-[8vh]  flex items-center justify-center bg-[#1E2129] border border-gray-300/25 rounded-full tooltip">
 
-								<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-[5vh] h-[5vh] text-white">
+								<span class="tooltiptext">Travailleur</span>
+
+								<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-[4vh] h-[4vh] text-white">
 									<path stroke-linecap="round" stroke-linejoin="round" d="M4.5 12.75l7.5-7.5 7.5 7.5m-15 6l7.5-7.5 7.5 7.5" />
 								</svg>
 
@@ -1080,9 +1127,11 @@
 
 						<div class="w-full flex items-center justify-center">
 
-							<div class="w-[10vh] h-[10vh]  flex items-center justify-center bg-[#1E2129] border border-gray-300/25 rounded-full">
+							<div class="w-[8vh] h-[8vh] flex items-center justify-center bg-[#1E2129] border border-gray-300/25 rounded-full tooltip">
 
-								<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-[5vh] h-[5vh] text-white">
+								<span class="tooltiptext">Star Mondiale</span>
+
+								<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-[4vh] h-[4vh] text-white">
 									<path stroke-linecap="round" stroke-linejoin="round" d="M15.362 5.214A8.252 8.252 0 0112 21 8.25 8.25 0 016.038 7.048 8.287 8.287 0 009 9.6a8.983 8.983 0 013.361-6.867 8.21 8.21 0 003 2.48z" />
 									<path stroke-linecap="round" stroke-linejoin="round" d="M12 18a3.75 3.75 0 00.495-7.467 5.99 5.99 0 00-1.925 3.546 5.974 5.974 0 01-2.133-1A3.75 3.75 0 0012 18z" />
 								</svg>
@@ -1093,9 +1142,11 @@
 
 						<div class="w-full flex items-center justify-center">
 
-							<div class="w-[10vh] h-[10vh]  flex items-center justify-center bg-[#1E2129] border border-gray-300/25 rounded-full">
+							<div class="w-[8vh] h-[8vh] flex items-center justify-center bg-[#1E2129] border border-gray-300/25 rounded-full tooltip">
 
-								<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-[5vh] h-[5vh] text-white">
+								<span class="tooltiptext">Favori des Fans</span>
+
+								<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-[4vh] h-[4vh] text-white">
 									<path stroke-linecap="round" stroke-linejoin="round" d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12z" />
 								</svg>
 
@@ -1105,9 +1156,11 @@
 
 						<div class="w-full flex items-center justify-center">
 
-							<div class="w-[10vh] h-[10vh]  flex items-center justify-center bg-[#1E2129] border border-gray-300/25 rounded-full">
+							<div class="w-[8vh] h-[8vh]  flex items-center justify-center bg-[#1E2129] border border-gray-300/25 rounded-full tooltip">
 
-								<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-[5vh] h-[5vh] text-white">
+								<span class="tooltiptext">Soif de victoire</span>
+
+								<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-[4vh] h-[4vh] text-white">
 									<path stroke-linecap="round" stroke-linejoin="round" d="M16.5 18.75h-9m9 0a3 3 0 013 3h-15a3 3 0 013-3m9 0v-3.375c0-.621-.503-1.125-1.125-1.125h-.871M7.5 18.75v-3.375c0-.621.504-1.125 1.125-1.125h.872m5.007 0H9.497m5.007 0a7.454 7.454 0 01-.982-3.172M9.497 14.25a7.454 7.454 0 00.981-3.172M5.25 4.236c-.982.143-1.954.317-2.916.52A6.003 6.003 0 007.73 9.728M5.25 4.236V4.5c0 2.108.966 3.99 2.48 5.228M5.25 4.236V2.721C7.456 2.41 9.71 2.25 12 2.25c2.291 0 4.545.16 6.75.47v1.516M7.73 9.728a6.726 6.726 0 002.748 1.35m8.272-6.842V4.5c0 2.108-.966 3.99-2.48 5.228m2.48-5.492a46.32 46.32 0 012.916.52 6.003 6.003 0 01-5.395 4.972m0 0a6.726 6.726 0 01-2.749 1.35m0 0a6.772 6.772 0 01-3.044 0" />
 								</svg>
 
