--- a/FootballManagerHTML/components.html
+++ b/FootballManagerHTML/components.html
@@ -1692,7 +1692,13 @@
 
 							<div class="block mt-2">
 
-								<p class="text-white text-[12px]">Niveau de relation :</p>
+								<div class="w-full flex items-center justify-between">
+
+									<p class="text-white text-[12px]">Niveau de Relation :</p>
+
+									<p class="text-white text-[12px]">86%</p>
+
+								</div>
 
 								<div class="mt-1 w-full bg-gray-300/25 rounded-full p-[2px]">
 									<div class="w-[86%] bg-green-500 h-[5px] rounded-full"></div>
@@ -1950,7 +1956,13 @@
 
 							<div class="block mt-2">
 
-								<p class="text-white text-[12px]">Niveau de relation :</p>
+								<div class="w-full flex items-center justify-between">
+
+									<p class="text-white text-[12px]">Niveau de Relation :</p>
+
+									<p class="text-white text-[12px]">86%</p>
+
+								</div>
 
 								<div class="mt-1 w-full bg-gray-300/25 rounded-full p-[2px]">
 									<div class="w-[86%] bg-green-500 h-[5px] rounded-full"></div>
@@ -1966,11 +1978,17 @@
 
 					<p class="mt-1 text-gray-300 text-[14px]"><span class="hover:underline cursor-pointer">Attaquant</span> - <span class="hover:underline cursor-pointer">AC Milan</span> - <span class="hover:underline cursor-pointer">Serie A</span></p>
 
-					<div class="text-white text-[12px] mt-4 mb-4 pt-4 border-t border-gray-300/25 grid grid-cols-1 gap-3">
+					<div class="text-white text-[12px] mt-4 mb-4 pt-4 border-t border-gray-300/25 grid grid-cols-1 gap-4">
 
 						<div class="block">
 
-							<p class="text-white text-[12px]">Vitesse :</p>
+							<div class="w-full flex items-center justify-between">
+
+								<p class="text-white text-[12px]">Vitesse :</p>
+
+								<p class="text-white text-[12px]">67%</p>
+
+							</div>
 
 							<div class="mt-1 w-full bg-gray-300/25 rounded-full p-[2px]">
 								<div class="w-[67%] bg-amber-500 h-[5px] rounded-full"></div>
@@ -1980,7 +1998,13 @@
 
 						<div class="block">
 
-							<p class="text-white text-[12px]">Passes :</p>
+							<div class="w-full flex items-center justify-between">
+
+								<p class="text-white text-[12px]">Passes :</p>
+
+								<p class="text-white text-[12px]">94%</p>
+
+							</div>
 
 							<div class="mt-1 w-full bg-gray-300/25 rounded-full p-[2px]">
 								<div class="w-[94%] bg-green-500 h-[5px] rounded-full"></div>
@@ -1990,7 +2014,13 @@
 
 						<div class="block">
 
-							<p class="text-white text-[12px]">Tirs :</p>
+							<div class="w-full flex items-center justify-between">
+
+								<p class="text-white text-[12px]">Tirs :</p>
+
+								<p class="text-white text-[12px]">96%</p>
+
+							</div>
 
 							<div class="mt-1 w-full bg-gray-300/25 rounded-full p-[2px]">
 								<div class="w-[96%] bg-green-500 h-[5px] rounded-full"></div>
@@ -2000,7 +2030,13 @@
 
 						<div class="block">
 
-							<p class="text-white text-[12px]">Défense :</p>
+							<div class="w-full flex items-center justify-between">
+
+								<p class="text-white text-[12px]">Défense :</p>
+
+								<p class="text-white text-[12px]">78%</p>
+
+							</div>
 
 							<div class="mt-1 w-full bg-gray-300/25 rounded-full p-[2px]">
 								<div class="w-[78%] bg-green-500 h-[5px] rounded-full"></div>
@@ -2010,7 +2046,13 @@
 
 						<div class="block">
 
-							<p class="text-white text-[12px]">Gardien :</p>
+							<div class="w-full flex items-center justify-between">
+
+								<p class="text-white text-[12px]">Gardien :</p>
+
+								<p class="text-white text-[12px]">26%</p>
+
+							</div>
 
 							<div class="mt-1 w-full bg-gray-300/25 rounded-full p-[2px]">
 								<div class="w-[26%] bg-red-500 h-[5px] rounded-full"></div>
@@ -2020,7 +2062,13 @@
 
 						<div class="block">
 
-							<p class="text-white text-[12px]">Leadership :</p>
+							<div class="w-full flex items-center justify-between">
+
+								<p class="text-white text-[12px]">Leadership :</p>
+
+								<p class="text-white text-[12px]">98%</p>
+
+							</div>
 
 							<div class="mt-1 w-full bg-gray-300/25 rounded-full p-[2px]">
 								<div class="w-[98%] bg-green-500 h-[5px] rounded-full"></div>
@@ -2034,7 +2082,7 @@
 
 				<div class="w-full h-[60vh] px-6 pt-6 pb-0 pb-1 overflow-y-auto">
 
-					<span class="px-[8px] py-[3px] rounded-sm bg-green-500 text-white text-[18px]">Market Value : 4 000 000 €</span>
+					<span class="px-[8px] py-[3px] rounded-md bg-gray-300/25 text-white text-[18px]">Market Value : 4 000 000 €</span>
 
 					<div class="flex items-center mt-2">
 
@@ -2265,23 +2313,29 @@
 
 					</div>
 
-					<div class="text-white text-[12px] mb-4 pb-6">
+					<div class="text-white text-[12px] mb-4 pb-6 grid grid-cols-1 gap-2">
 
-						<div class="flex items-center">
+						<div class="flex items-center justify-between bg-gray-300/25 px-2 py-1 rounded-md">
 
-							<p class="text-gray-300 text-[14px]">Salaire : 292 000 € / Mois</p>
+							<p class="text-white text-[14px]">Salaire :</p>
 
-						</div>
-
-						<div class="flex items-center">
-
-							<p class="text-gray-300 text-[14px]">Nombres de buts total : 244 buts</p>
+							<p class="text-gray-200 text-[14px]">292 000 € / Mois</p>
 
 						</div>
 
-						<div class="flex items-center">
+						<div class="flex items-center justify-between bg-gray-300/25 px-2 py-1 rounded-md">
 
-							<p class="text-gray-300 text-[14px]">Nombres de clubs pro : 7 clubs</p>
+							<p class="text-white text-[14px]">Nb buts total :</p>
+
+							<p class="text-gray-200 text-[14px]">244 buts</p>
+
+						</div>
+
+						<div class="flex items-center justify-between bg-gray-300/25 px-2 py-1 rounded-md">
+
+							<p class="text-white text-[14px]">Nb clubs pro :</p>
+
+							<p class="text-gray-200 text-[14px]">7 clubs</p>
 
 						</div>
 
