--- a/FootballManagerHTML/components.html
+++ b/FootballManagerHTML/components.html
@@ -2347,5 +2347,13 @@
 
 		</div>
 
+		<div class="px-8 py-4 flex items-start gap-x-8 border-b border-gray-300/50 bg-white/10">
+
+			<p class="text-white text-[22px]">PAGE DES TRANSFERT / PRÊTS - (100vh)</p>
+
+		</div>
+
+		<div class="px-8 py-16 flex items-start flex-wrap gap-8 border-b border-gray-300/50"></div>
+
 	</body>
 </html>
