--- a/FootballManagerHTML/components.html
+++ b/FootballManagerHTML/components.html
@@ -4522,7 +4522,7 @@
 
 			</div>
 
-			<div class="w-[20%] p-4">
+			<div class="w-[20%] p-4 overflow-x-hidden overflow-y-auto">
 
 				<div class="mb-4 px-2 py-1 border border-gray-300/25 text-white text-[12px] hover:bg-white/10 cursor-pointer transition-all text-right">Fermer cette fenêtre</div>
 
@@ -4568,45 +4568,83 @@
 
 				</div>
 
-				<!-- NOTIFICATION - MESSAGE DE Didier Deschamps - PETIT -->
-				<div class="mb-3 bg-[#1E2129] w-full border-t-[6px] border-t-blue-500 border border-gray-300/25 hover:cursor-pointer hover:bg-white/10 transition-all">
+				<!-- NOTIFICATION - MESSAGE DE Didier Deschamps A ENTRAINEUR - GRAND -->
+				<div class="mb-3 bg-[#1E2129] w-full border-t-[6px] border-t-blue-500 border border-gray-300/25">
 
-					<div class="p-4 w-full flex items-start justify-between">
+					<div class="p-4 pb-6 w-full flex items-start justify-between">
 
 						<span class="px-2 py-1 bg-blue-500 text-white text-[12px] font-bold rounded-sm">MESSAGE</span>
 
 						<div class="block text-right">
 
-							<p class="text-white text-[14px]">Didier Deschamps</p>
-
-							<p class="text-gray-300 text-[12px]">Entraineur de l'Équipe de France</p>
-
-							<p class="text-gray-300 text-[12px]">16/02/2023 à 14h52</p>
+							<p class="text-gray-300 text-[14px]">16/02/2023 à 14h52</p>
 
 						</div>
 
 					</div>
+
+					<div class="px-6 py-0 pb-1 w-full">
+
+						<div class="cursor-pointer w-12 h-12 bg-[url('https://resize.programme-television.ladmedia.fr/r/670,670/img/var/premiere/storage/images/tele-7-jours/news-tv/equipe-de-france-surprise-didier-deschamps-appelle-un-26e-joueur-pour-disputer-la-coupe-du-monde-au-qatar-4696732/101191920-1-fre-FR/Equipe-de-France-Surprise-Didier-Deschamps-appelle-un-26e-joueur-pour-disputer-la-Coupe-du-monde-au-Qatar.jpg')] bg-cover bg-center rounded-full"></div>
+
+						<p class="mt-2 text-white text-[14px] hover:underline cursor-pointer">Didier Deschamps</p>
+
+						<p class="text-gray-300 text-[12px]">Entraineur de l'Équipe de France</p>
+
+						<div class="text-white text-[12px] mt-4 mb-4 pt-4 border-t border-gray-300/25">
+
+							Bonjour NOM_ENTRAINEUR !<br>Je viens vous voir pour savoir si ces joueurs pourront être libérés pour la prochaine compétition internationale (<span class="hover:underline cursor-pointer">Euro 2024</span>) :
+
+							<div class="my-2 px-3 py-2 bg-gray-300/10 rounded-md">
+
+								<p>- <span class="hover:underline cursor-pointer">Kylian Mbappé</span> <br> - <span class="hover:underline cursor-pointer">Antoine Griezman</span> <br> - <span class="hover:underline cursor-pointer">Olivier Giroud</span></p>
+
+							</div>
+
+							Il faudrait me répondre le plus vite possible ! Je voudrais aussi votre félicité pour votre victoire en championnat ! <br><br> Cordialement, <br> <span class="hover:underline cursor-pointer">Didier Deschamps</span>
+
+						</div>
+
+					</div>
+
+					<div class="w-full py-3 flex items-center justify-center border-t border-gray-300/25 text-white text-[14px] hover:bg-white/10 transition-all cursor-pointer">Fermer le Message</div>
 
 				</div>
 
-				<!-- NOTIFICATION - MESSAGE DE Lionel Messi - PETIT -->
-				<div class="mb-3 bg-[#1E2129] w-full border-t-[6px] border-t-blue-500 border border-gray-300/25 hover:cursor-pointer hover:bg-white/10 transition-all">
+				<!-- NOTIFICATION - MESSAGE DE Lionel Messi - GRAND  -->
+				<div class="mb-3 bg-[#1E2129] w-full border-t-[6px] border-t-blue-500 border border-gray-300/25">
 
-					<div class="p-4 w-full flex items-start justify-between">
+					<div class="p-4 pb-6 w-full flex items-start justify-between">
 
 						<span class="px-2 py-1 bg-blue-500 text-white text-[12px] font-bold rounded-sm">MESSAGE</span>
 
 						<div class="block text-right">
 
-							<p class="text-white text-[14px]">Lionel Messi</p>
-
-							<p class="text-gray-300 text-[12px]">Joueur du Paris Saint Germain</p>
-
-							<p class="text-gray-300 text-[12px]">16/02/2023 à 14h52</p>
+							<p class="text-gray-300 text-[14px]">16/02/2023 à 14h52</p>
 
 						</div>
 
 					</div>
+
+					<div class="px-6 py-0 pb-1 w-full">
+
+						<div class="cursor-pointer w-12 h-12 bg-[url('https://img.20mn.fr/OQiqzKe1Q9S2ZA9AaEIQcCk/768x492_japan-and-germany-out-editorial-use-only-no-use-with-unauthorised-audio-video-data-fixture-lists-outside-the-eu-club-league-logos-or-live-services-online-in-match-use-limited-to-45-images-15-in-extra-time-no-use-to-emulate-moving-images-no-use-in-betting-games-or-single-club-league-player-publications-services-mandatory-credit-photo-by-power-sport-images-shutterstock-13726627at-lionel-messi-looks-on-prior-the-riyadh-all-star-xi-vs-paris-saint-germain-fc-at-king-fahd-stadium-on-january-19-2023-in-riyadh-saudi-arabia-photo-by-hamoud-al-osaimi-power-sport-images-riyadh-all-star-xi-v-paris-saint-germain-fc-king-fahd-stadium-riyadh-saudi-arabia-19-jan-2023-shutterstock-editorial-riyadh-all-star-xi-v-paris-sa-13726627at-japan-and-germany-out-editorial-use-only-no-use-with-unauthorised-audio-video-data-fixture-lists-outside-the-eu-club-league-logos-or-live-services-online-in-match-use-limited-to-45-images-15-in-extra-time-no-use-to-emulate-moving-images-no-u-2301192016')] bg-cover bg-center rounded-full"></div>
+
+						<p class="mt-2 text-white text-[14px] hover:underline cursor-pointer">Lionel Messi</p>
+
+						<p class="text-gray-300 text-[12px]">Joueur du Paris Saint Germain</p>
+
+						<div class="text-white text-[12px] mt-4 mb-4 pt-4 border-t border-gray-300/25">
+
+							Salut Coach, je suis en pleine forme et je trouve que me mettre sur le banc pour notre prochaine rencontre n'est pas une bonne solution, je vous promets de faire un grand match ! <br><br> Cordialement, <br> <span class="hover:underline cursor-pointer">Lionel Messi</span>
+
+						</div>
+
+					</div>
+
+					<div class="w-full py-3 flex items-center justify-center border-t border-gray-300/25 text-white text-[14px] hover:bg-blue-500/10 transition-all cursor-pointer">Voir la composition de l'équipe</div>
+
+					<div class="w-full py-3 flex items-center justify-center border-t border-gray-300/25 text-white text-[14px] hover:bg-white/10 transition-all cursor-pointer">Fermer le Message</div>
 
 				</div>
 
