--- a/FootballManagerHTML/components.html
+++ b/FootballManagerHTML/components.html
@@ -3933,7 +3933,7 @@
 
 		<div class="px-8 py-4 flex items-start gap-x-8 border-b border-gray-300/50 bg-white/10">
 
-			<p class="text-white text-[22px]">PAGE ACCUEIL</p>
+			<p class="text-white text-[22px]">PAGE ACCUEIL AVEC CHAMPIONNAT + CARTE JOUEUR + MESSAGES OUVERTS</p>
 
 		</div>
 
