--- a/FootballManagerHTML/components.html
+++ b/FootballManagerHTML/components.html
@@ -3944,7 +3944,7 @@
 				<div class="mb-4 px-2 py-1 border border-gray-300/25 text-white text-[12px] hover:bg-white/10 cursor-pointer transition-all text-left">Fermer cette fenêtre</div>
 
 				<!-- LIGUE PROFESSIONNELLE DE FOOTBALL - TEST Ligue 1 - Championnat de France de football -->
-				<div class="bg-[#1E2129] w-full border border-gray-300/25">
+				<div class="mb-4 bg-[#1E2129] w-full border border-gray-300/25">
 
 					<div class="px-6 pt-6 pb-0 pb-1 w-full">
 
@@ -4082,6 +4082,31 @@
 
 				</div>
 
+				<!-- LIGUE PROFESSIONNELLE DE FOOTBALL - TEST Serie A - Championnat d'Italie de football -->
+				<div class="bg-[#1E2129] w-full border border-gray-300/25">
+
+					<div class="px-6 pt-6 pb-0 pb-1 w-full">
+
+						<img alt="Logo Serie A" src="https://upload.wikimedia.org/wikipedia/commons/e/e9/Serie_A_logo_2022.svg" class="cursor-pointer w-14">
+
+						<p class="mt-3 text-white text-[14px] hover:underline cursor-pointer">Serie A - Championnat d'Italie de football</p>
+
+						<p class="mt-1 text-gray-300 text-[12px]">Championnat professionnel de football masculin de plus haut niveau de la FIGC - Lega Serie A</p>
+
+						<div class="text-white text-[12px] mt-4 mb-4 pt-4 border-t border-gray-300/25 grid grid-cols-3 gap-3">
+
+							<div class="w-full h-[10vh] bg-amber-400/[15%] border border-gray-300/25 flex items-center justify-center group hover:bg-white/10 cursor-pointer transition-all">
+
+								<img alt="Logo AC Milan" src="https://upload.wikimedia.org/wikipedia/commons/d/d0/Logo_of_AC_Milan.svg" class="h-[7vh] group-hover:h-[6.5vh] transition-all">
+
+							</div>
+
+						</div>
+
+					</div>
+
+				</div>
+
 			</div>
 
 			<div class="w-[60%] h-[100vh] border-x border-[#17191F]/50 bg-[url('https://fr.reformsports.com/oachoata/2022/04/terrains-pour-le-grand-football.jpeg')] bg-center bg-cover">
@@ -4090,11 +4115,17 @@
 
 					<div class="w-full h-[10vh] px-4 border-b border-[#17191F]/50 flex items-center justify-between bg-[#17191F]">
 
-						<div class="w-[25vh] py-2 px-4 rounded-lg bg-gray-300/25 text-left">
+						<div class="w-[30vh] py-2 px-4 rounded-lg bg-gray-300/25 text-left flex items-center">
 
-							<p class="text-white text-[16px]">NOM_ENTRAINEUR</p>
+							<img alt="Logo PSG" src="https://upload.wikimedia.org/wikipedia/fr/8/86/Paris_Saint-Germain_Logo.svg" class="h-[5vh] mr-3">
 
-							<p class="text-gray-300 text-[13px]">Paris Saint Germain - Ligue 1</p>
+							<div class="block">
+
+								<p class="text-white text-[16px]">NOM_ENTRAINEUR</p>
+
+								<p class="text-gray-300 text-[13px]">Paris Saint Germain - Ligue 1</p>
+
+							</div>
 
 						</div>
 
@@ -4539,7 +4570,7 @@
 				<div class="mb-4 px-2 py-1 border border-gray-300/25 text-white text-[12px] hover:bg-white/10 cursor-pointer transition-all text-right">Fermer cette fenêtre</div>
 
 				<!-- NOTIFICATION - MESSAGE DE José Mourinho - PETIT -->
-				<div class="mb-3 bg-[#1E2129] w-full border-t-[6px] border-t-blue-500 border border-gray-300/25 hover:cursor-pointer hover:bg-white/10 transition-all">
+				<div class="mb-4 bg-[#1E2129] w-full border-t-[6px] border-t-blue-500 border border-gray-300/25 hover:cursor-pointer hover:bg-white/10 transition-all">
 
 					<div class="p-4 w-full flex items-start justify-between">
 
@@ -4560,7 +4591,7 @@
 				</div>
 
 				<!-- NOTIFICATION - TRANSFERT ANNULÉ - GRAND -->
-				<div class="mb-3 bg-[#1E2129] w-full border-t-[6px] border-t-red-600 border border-gray-300/25">
+				<div class="mb-4 bg-[#1E2129] w-full border-t-[6px] border-t-red-600 border border-gray-300/25">
 
 					<div class="p-6 pb-0 w-full flex items-center justify-between">
 
@@ -4623,7 +4654,7 @@
 				</div>
 
 				<!-- NOTIFICATION - MESSAGE DE Nasser al-Khelaïfi - PETIT -->
-				<div class="mb-3 bg-[#1E2129] w-full border-t-[6px] border-t-blue-500 border border-gray-300/25 hover:cursor-pointer hover:bg-white/10 transition-all">
+				<div class="mb-4 bg-[#1E2129] w-full border-t-[6px] border-t-blue-500 border border-gray-300/25 hover:cursor-pointer hover:bg-white/10 transition-all">
 
 					<div class="p-4 w-full flex items-start justify-between">
 
@@ -4644,7 +4675,7 @@
 				</div>
 
 				<!-- NOTIFICATION - MESSAGE DE Didier Deschamps A ENTRAINEUR - GRAND -->
-				<div class="mb-3 bg-[#1E2129] w-full border-t-[6px] border-t-blue-500 border border-gray-300/25">
+				<div class="mb-4 bg-[#1E2129] w-full border-t-[6px] border-t-blue-500 border border-gray-300/25">
 
 					<div class="p-4 pb-6 w-full flex items-start justify-between">
 
@@ -4687,7 +4718,7 @@
 				</div>
 
 				<!-- NOTIFICATION - TRANSFERT CONFIRMÉ - PETIT -->
-				<div class="mb-3 bg-[#1E2129] w-full border-t-[6px] border-t-green-500 border border-gray-300/25 hover:cursor-pointer hover:bg-white/10 transition-all">
+				<div class="mb-4 bg-[#1E2129] w-full border-t-[6px] border-t-green-500 border border-gray-300/25 hover:cursor-pointer hover:bg-white/10 transition-all">
 
 					<div class="p-4 w-full flex items-start justify-between">
 
@@ -4720,7 +4751,7 @@
 				</div>
 
 				<!-- NOTIFICATION - MESSAGE DE Lionel Messi - GRAND  -->
-				<div class="mb-3 bg-[#1E2129] w-full border-t-[6px] border-t-blue-500 border border-gray-300/25">
+				<div class="mb-4 bg-[#1E2129] w-full border-t-[6px] border-t-blue-500 border border-gray-300/25">
 
 					<div class="p-4 pb-6 w-full flex items-start justify-between">
 
