--- a/FootballManagerHTML/components.html
+++ b/FootballManagerHTML/components.html
@@ -4829,7 +4829,7 @@
 
 					<span class="px-2 py-1 bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 text-white text-[12px] font-bold rounded-sm">HALL OF FAME</span>
 
-					<span class="px-2 py-1 bg-gray-300/25 text-white text-[12px] rounded-sm">Paris Saint Germain</span>
+					<span class="px-2 py-1 bg-gray-300/25 text-white text-[12px] rounded-sm flex items-center"><img src="https://upload.wikimedia.org/wikipedia/fr/8/86/Paris_Saint-Germain_Logo.svg" alt="Logo PSG" class="w-5 mr-1">Paris Saint Germain</span>
 
 				</div>
 
@@ -4953,7 +4953,7 @@
 
 					<span class="px-2 py-1 bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 text-white text-[12px] font-bold rounded-sm">HALL OF FAME</span>
 
-					<span class="px-2 py-1 bg-gray-300/25 text-white text-[12px] rounded-sm">Real Madrid FC</span>
+					<span class="px-2 py-1 bg-gray-300/25 text-white text-[12px] rounded-sm flex items-center"><img src="https://upload.wikimedia.org/wikipedia/fr/c/c7/Logo_Real_Madrid.svg" alt="Logo Real Madrid" class="h-5 mr-2">Real Madrid FC</span>
 
 				</div>
 
