--- a/FootballManagerHTML/components.html
+++ b/FootballManagerHTML/components.html
@@ -58,7 +58,7 @@
 
 		</div>
 
-		<div class="px-8 py-16 flex items-start flex-wrap gap-8 border-b border-gray-300/50">
+		<div class="px-8 py-16 flex items-start justify-center flex-wrap gap-8 border-b border-gray-300/50">
 
 			<!-- NOTIFICATION - TRANSFERT CONFIRMÉ - GRAND -->
 			<div class="bg-[#1E2129] w-[40vh] border-t-[6px] border-t-green-500 border border-gray-300/25">
@@ -339,6 +339,67 @@
 							<img alt="Logo AC Milan" src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d0/Logo_of_AC_Milan.svg/1200px-Logo_of_AC_Milan.svg.png" class="h-10">
 
 						</div>
+
+					</div>
+
+					<div class="px-4 py-2 w-full flex items-center justify-right">
+
+						<p class="text-gray-300 text-[12px] text-right">16/02/2023 à 14h52</p>
+
+					</div>
+
+				</div>
+
+			</div>
+
+			<div class="grid grid-cols-1 gap-y-4">
+
+				<!-- NOTIFICATION - TRANSFERT CONFIRMÉ - PETIT -->
+				<div class="bg-[#1E2129] w-[40vh] border-t-[6px] border-t-green-500 border border-gray-300/25 hover:cursor-pointer hover:bg-white/10 transition-all">
+
+					<div class="p-4 w-full flex items-start justify-between">
+
+						<span class="px-2 py-1 bg-green-500 text-white text-[12px] font-bold rounded-sm">TRANSFERT CONFIRMÉ</span>
+
+						<span class="px-2 py-1 bg-gray-300/25 text-white text-[12px] rounded-sm">Neymar Jr</span>
+
+					</div>
+
+					<div class="px-4 py-2 w-full flex items-center justify-right">
+
+						<p class="text-gray-300 text-[12px] text-right">16/02/2023 à 14h52</p>
+
+					</div>
+
+				</div>
+
+				<!-- NOTIFICATION - TRANSFERT ANNULÉ - PETIT -->
+				<div class="bg-[#1E2129] w-[40vh] border-t-[6px] border-t-red-600 border border-gray-300/25 hover:cursor-pointer hover:bg-white/10 transition-all">
+
+					<div class="p-4 w-full flex items-start justify-between">
+
+						<span class="px-2 py-1 bg-red-600 text-white text-[12px] font-bold rounded-sm">TRANSFERT ANNULÉ</span>
+
+						<span class="px-2 py-1 bg-gray-300/25 text-white text-[12px] rounded-sm">Olivier Giroud</span>
+
+					</div>
+
+					<div class="px-4 py-2 w-full flex items-center justify-right">
+
+						<p class="text-gray-300 text-[12px] text-right">16/02/2023 à 14h52</p>
+
+					</div>
+
+				</div>
+
+				<!-- NOTIFICATION - PRÊT CONFIRMÉ - PETIT -->
+				<div class="bg-[#1E2129] w-[40vh] border-t-[6px] border-t-amber-500 border border-gray-300/25 hover:cursor-pointer hover:bg-white/10 transition-all">
+
+					<div class="p-4 w-full flex items-start justify-between">
+
+						<span class="px-2 py-1 bg-amber-500 text-white text-[12px] font-bold rounded-sm">PRÊT CONFIRMÉ</span>
+
+						<span class="px-2 py-1 bg-gray-300/25 text-white text-[12px] rounded-sm">Mattéo Guendouzi</span>
 
 					</div>
 
@@ -691,7 +752,7 @@
 
 		</div>
 
-		<div class="px-8 py-16 flex items-start flex-wrap gap-8 border-b border-gray-300/50">
+		<div class="px-8 py-16 flex items-start justify-center flex-wrap gap-8 border-b border-gray-300/50">
 
 			<!-- LIGUE PROFESSIONNELLE DE FOOTBALL - TEST Ligue 1 - Championnat de France de football -->
 			<div class="bg-[#1E2129] w-[40vh] border border-gray-300/25">
@@ -915,7 +976,7 @@
 
 		</div>
 
-		<div class="px-8 py-16 flex items-start flex-wrap gap-8 border-b border-gray-300/50">
+		<div class="px-8 py-16 flex items-start justify-center flex-wrap gap-8 border-b border-gray-300/50">
 
 			<!-- CARTE D'UN JOUEUR - TEST N°1 -->
 			<div class="bg-[#1E2129] w-[40vh] border border-gray-300/25">
@@ -4818,7 +4879,7 @@
 
 		</div>
 
-		<div class="px-8 py-16 flex items-start flex-wrap gap-8 border-b border-gray-300/50">
+		<div class="px-8 py-16 flex items-start justify-center flex-wrap gap-8 border-b border-gray-300/50">
 
 			<!-- HALL OF FAME DE VOTRE CLUB -->
 			<div class="bg-[#1E2129] w-[80vh] border border-gray-300/25">
@@ -4938,7 +4999,7 @@
 
 				</div>
 
-				<div class="w-full py-3 flex items-center justify-center border-t border-gray-300/25 text-white text-[14px] hover:bg-gradient-to-r from-indigo-500/10 via-purple-500/10 to-pink-500/10 transition-all cursor-pointer">Agrandir le Hall of Fame</div>
+				<div class="w-full py-3 flex items-center justify-center border-t border-gray-300/25 text-white text-[14px] hover:bg-gradient-to-r from-indigo-500/10 via-purple-500/10 to-pink-500/10 transition-all cursor-pointer">Ajouter un joueur au Hall of Fame</div>
 
 				<div class="w-full py-3 flex items-center justify-center border-t border-gray-300/25 text-white text-[14px] hover:bg-white/10 transition-all cursor-pointer">Fermer le Hall of Fame</div>
 
