--- a/FootballManagerHTML/components.html
+++ b/FootballManagerHTML/components.html
@@ -54,7 +54,7 @@
 
 		<div class="px-8 py-4 flex items-start gap-x-8 border-b border-gray-300/50 bg-white/10">
 
-			<p class="text-white text-[22px]">NOTIFICATIONS</p>
+			<p class="text-white text-[22px]">NOTIFICATIONS (TRANSFERTS, PRÊTS, MESSAGES, OFFRES)</p>
 
 		</div>
 
